# master_projects

./: README.md
AdvancedMachineLearning/: README.md
BigData/: README.md  pyproject.toml
BigData/conclusions/: accuracies.csv  f1_scores_macro.csv  unique_values_counts.txt
BigData/performance_measurements/: EDA.ipynb
BigData/performance_measurements/PCA/: CatBoost.ipynb  KNN.ipynb  NaiveBayes.ipynb  RandomForestClassifier.ipynb  XGBClassifier.ipynb  preprocessing.py
BigData/performance_measurements/PCA/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
BigData/performance_measurements/PCA/catboost_info/learn/: events.out.tfevents
BigData/performance_measurements/UMAP/: CatBoost.ipynb  KNN.ipynb  NaiveBayes.ipynb  RandomForestClassifier.ipynb  XGBClassifier.ipynb  preprocessing.py
BigData/performance_measurements/UMAP/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
BigData/performance_measurements/UMAP/catboost_info/learn/: events.out.tfevents
BigData/performance_measurements/random_projection/: CatBoost.ipynb  KNN.ipynb  NaiveBayes.ipynb  RandomForestClassifier.ipynb  XGBClassifier.ipynb  preprocessing.py
BigData/performance_measurements/random_projection/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
BigData/performance_measurements/simple_encoding/: CatBoost.ipynb  KNN.ipynb  NaiveBayes.ipynb  RandomForestClassifier.ipynb  XGBClassifier.ipynb  preprocessing.py
BigData/performance_measurements/simple_encoding/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
(+52 files in other folders)
